--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -1,3 +1,4 @@
+<!-- Products Landing Page -->
 <div class="row">
     <div class="col s4 orange lighten-5 z-depth-5">
       <div class="col s8" ng-if="showTooltip">
@@ -10,3 +11,4 @@
       </div>
     </div>
 </div>
+<!-- End of Products Landing Page -->
