--- a/client_side/partials/signUp.html
+++ b/client_side/partials/signUp.html
@@ -1,4 +1,4 @@
-<!-- SignUp here -->
+<!-- SignUp Form-->
 <div class="row orange lighten-5 z-depth-5">
   <div class="container">
 
@@ -87,7 +87,7 @@
 
 
 
-<br>
+    <br>
     <h5>Upload Documents</h5>
         <div class="file-field input-field">
           <div class="btn-floating lime darken-4 left">
