contact form set up

--- a/client_side/partials/contact.html
+++ b/client_side/partials/contact.html
@@ -2,16 +2,14 @@
 <div class="row orange lighten-5 z-depth-5">
   <div class="container">
 
-    <h5>Contact Us</h5>
-        <h7><b><u>Kush Taxi</u></b></h7>
-            <p class="grey-text text-darken-4">
+    <div class="brown-text text darken-2">
+          <h5>Contact Us</h5>
               <i>Serving Venice, Santa Monica, Marina Del Rey</i><br>
               <b>Hours:</b> Sun-Thurs: 2pm-Midnight, Fri-Sat: 2pm-1am<br>
               <b>Phone:</b> 310.625.4424<br>
               <b>Email:</b> gethigh@kushtaxi.com
-            </p>
+  </div>
 
-    <h7><b><u>Contact Form</u></b></h7>
         <form ng-submit="co.submit()">
         <div class="input-field">
           <input ng-model="su.patient.name" id="name" type="text" class="validate">
