--- a/client_side/partials/locations.html
+++ b/client_side/partials/locations.html
@@ -1,7 +1,11 @@
 <!-- Locations -->
 
-<h5><b>Service Areas</b></h5>
-<br>
-<img src="Service_area.jpg"/>
+    <div class="brown-text text darken-2">
+        <h5><b>Service Areas</b></h5>
+          <br>
+        <div class="row orange lighten-5 z-depth-5">
+            <img src="Service_area.jpg"/>
+        </div>
+    </div>
 
 <!-- End of Locations  -->
