styling and products page initialized

--- a/client_side/partials/logIn.html
+++ b/client_side/partials/logIn.html
@@ -1,6 +1,7 @@
 <!-- Patient Login Form -->
 <div class="row orange lighten-5 z-depth-5">
-  <div class="container">
+  <div class="container brown-text text darken-2">
+    <h5>Patient Portal</h5>
     <form ng-submit="ln.submit()">
       <div class="row">
         <div class="input-field">
