--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -1,14 +1,113 @@
-<!-- Products Landing Page -->
-<div class="row">
-    <div class="col s4 orange lighten-5 z-depth-5">
-      <div class="col s8" ng-if="showTooltip">
-          <!-- data-position can be : bottom, top, left, or right -->
-          <!-- data-delay controls delay before tooltip shows (in milliseconds)-->
-            <img tooltipped src="green-krack-sativa.jpg" class="btn col s4 offset-s4 l2 offset-l1" data-position="bottom" data-delay="50" data-tooltip="Flowers"/></a>
-            <a tooltipped class="btn col s4 offset-s4 l2 offset-l1" data-position="top" data-delay="150" data-tooltip="Edibles"> Top</a>
-            <a tooltipped class="btn col s4 offset-s4 l2 offset-l1" data-position="left" data-delay="250" data-tooltip="Concentrates"> Left</a>
-            <a tooltipped class="btn col s4 offset-s4 l2 offset-l1" data-position="right" data-delay="550" data-tooltip="Clones"> Right</a>
-      </div>
+
+  <nav ng-class="JSCtrl.colorScheme">
+    <div class="nav-wrapper">
+          <form>
+            <div class="input-field">
+            <input id="search" type="search" required ng-model="$root.search">
+            <label for="search"><i class="material-icons ">search</i></label>
+            <i class="material-icons">close</i>
+            </div>
+          </form>
+    </div>
+  </nav>
+
+<div class="row" >
+    <div class="col s12">
+        <ul class="tabs" tabs>
+            <li class="tab col s3 ">
+              <a ui-sref="javascript">
+                <div class="chip">
+                  <img src="flowers.jpg" alt="Flowers">
+                  Flowers
+                </div>
+              </a>
+            </li>
+            <li class="tab col s3">
+              <a ui-sref="angularjs">
+                <div class="chip">
+                  <img src="edibles.jpg" alt="Edibles">
+                  Edibles
+                </div>
+              </a>
+            </li>
+            <li class="tab col s3">
+              <a ui-sref="angularjs">
+                <div class="chip">
+                  <img src="Concentrates.jpg" alt="Concentrates">
+                  Concentrates
+                </div>
+              </a>
+            </li>
+            <li class="tab col s3">
+              <a ui-sref="jquery">
+                <div class="chip">
+                  <img src="clones.jpeg" alt="Clones">
+                  Clones
+                </div>
+              </a>
+            </li>
+            <!--<li class="tab col s3"><a href="#test4">Test 4</a></li>-->
+        </ul>
     </div>
 </div>
-<!-- End of Products Landing Page -->
+
+
+
+
+
+
+
+
+<script>
+  $('li.tab a').click(function(){
+    //console.log(this)
+    $('li.tab a').removeClass('active')
+    $(this).addClass('active')
+    // $('#search').val('')
+  })
+</script>
+
+
+
+<!-- Template for Products -->
+  <div class="row">
+
+    <div class="col s3 orange lighten-5 z-depth-5">
+      <div class="card small hoverable orange lighten-5">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator scalable" src="Ultra-violet-sativa.jpg"/>
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Ultra Violet<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
+          <p><a href="#">Learn more about this strain</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Ultra Violet Prices<i class="material-icons right">close</i></span>
+            <p>1/8: $60<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
+            <p>1/4: $100<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
+            <p>1/2: $180<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
+            <p>Oz: $320<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
+        </div>
+      </div>
+    </div>
+
+  <div class="col s3 orange lighten-5 z-depth-5">
+    <div class="card small hoverable orange lighten-5">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator scalable" src="green-krack-sativa.jpg"/>
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">Green Krack<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
+        <p><a href="#">Learn more about this strain</a></p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">Green Krack Prices<i class="material-icons right">close</i></span>
+        <p>1/8: $60<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
+        <p>1/4: $100<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
+        <p>1/2: $180<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
+        <p>Oz: $320<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Template for Products -->
