styling and products page initialized

--- a/client_side/partials/orders.html
+++ b/client_side/partials/orders.html
@@ -1,5 +1,6 @@
     <!-- Past Orders Table -->
 <div class="row orange lighten-5 z-depth-5" ng-controller="patients as ps">
+  <div class="brown-text text darken-2">
     <ul class="collapsible " data-collapsible="accordion" watch>
         <li ng-repeat="order in ps.orders">
             <div class="collapsible-header">
@@ -18,6 +19,7 @@
             </div>
         </li>
     </ul>
+  </div>
 </div>
 <script type="text/javascript">
 
