--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -17,7 +17,7 @@
             <li class="tab col s3 ">
               <a ui-sref="javascript">
                 <div class="chip">
-                  <img src="flowers.jpg" alt="Flowers">
+                  <img src="Flowers.jpg" alt="Flowers">
                   Flowers
                 </div>
               </a>
