--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -1,15 +1,28 @@
 
-  <nav ng-class="JSCtrl.colorScheme">
-    <div class="nav-wrapper">
-          <form>
-            <div class="input-field">
+    <div class="row">
+            <div class="input-field col s3">
             <input id="search" type="search" required ng-model="$root.search">
             <label for="search"><i class="material-icons ">search</i></label>
             <i class="material-icons">close</i>
             </div>
-          </form>
+
+
+              <!-- Dropdown Trigger -->
+              <a class='dropdown-button btn' href='#!' data-activates='demoDropdown' dropdown data-hover="true">
+                  This is a dropdown
+              </a>
+
+              <!-- Dropdown Structure -->
+              <ul id='demoDropdown' class='dropdown-content'>
+                  <li><a href="javascript:void(0);">Link 1</a></li>
+                  <li><a href="javascript:void(0);">Link 2</a></li>
+                  <li><a href="javascript:void(0);">Link 3</a></li>
+                  <li><a href="javascript:void(0);">Link 4</a></li>
+                  <li><a href="javascript:void(0);">Link 5</a></li>
+              </ul>
+
+
     </div>
-  </nav>
 
 <div class="row" >
     <div class="col s12">
@@ -52,9 +65,20 @@
 </div>
 
 
+<!-- <script type="text/javascript">
 
+$('.dropdown-button').dropdown({
+      inDuration: 300,
+      outDuration: 225,
+      constrain_width: false, // Does not change width of dropdown to that of the activator
+      hover: true, // Activate on hover
+      gutter: 0, // Spacing from edge
+      belowOrigin: false, // Displays dropdown below the button
+      alignment: 'left' // Displays dropdown with edge aligned to the left of button
+    }
+  );
 
-
+  </script> -->
 
 
 
@@ -110,4 +134,20 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+  $(document).ready(function() {
+    console.log('working');
+
+  $('.dropdown-button').dropdown({
+      inDuration: 300,
+      outDuration: 225,
+      constrain_width: false, // Does not change width of dropdown to that of the activator
+      hover: true, // Activate on hover
+      gutter: 0, // Spacing from edge
+      belowOrigin: false, // Displays dropdown below the button
+      alignment: 'left' // Displays dropdown with edge aligned to the left of button
+    }
+  );
+})
+</script>
 <!-- End Template for Products -->
