fixed img paths

--- a/client_side/partials/locations.html
+++ b/client_side/partials/locations.html
@@ -4,7 +4,7 @@
         <h5><b>Service Areas: Venice, Santa Monica, Marina Del Rey</b></h5>
           <br>
         <div class="row orange lighten-5 z-depth-5">
-            <img src="Service_area.jpg"/>
+            <img src="/images/Service_area.jpg"/>
         </div>
     </div>
 
