--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -30,7 +30,7 @@
             <li class="tab col s3 ">
               <a ui-sref="javascript">
                 <div class="chip">
-                  <img src="Flowers.jpg" alt="Flowers">
+                  <img src="/images/Flowers.jpg" alt="Flowers">
                   Flowers
                 </div>
               </a>
@@ -38,7 +38,7 @@
             <li class="tab col s3">
               <a ui-sref="angularjs">
                 <div class="chip">
-                  <img src="edibles.jpg" alt="Edibles">
+                  <img src="/images/edibles.jpg" alt="Edibles">
                   Edibles
                 </div>
               </a>
@@ -46,7 +46,7 @@
             <li class="tab col s3">
               <a ui-sref="angularjs">
                 <div class="chip">
-                  <img src="Concentrates.jpg" alt="Concentrates">
+                  <img src="/images/Concentrates.jpg" alt="Concentrates">
                   Concentrates
                 </div>
               </a>
@@ -54,7 +54,7 @@
             <li class="tab col s3">
               <a ui-sref="jquery">
                 <div class="chip">
-                  <img src="clones.jpeg" alt="Clones">
+                  <img src="/images/clones.jpeg" alt="Clones">
                   Clones
                 </div>
               </a>
@@ -99,7 +99,7 @@ $('.dropdown-button').dropdown({
     <div class="col s3 orange lighten-5 z-depth-5">
       <div class="card small hoverable orange lighten-5">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator scalable" src="Ultra-violet-sativa.jpg"/>
+          <img class="activator scalable" src="/images/Ultra-violet-sativa.jpg"/>
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Ultra Violet<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
@@ -118,7 +118,7 @@ $('.dropdown-button').dropdown({
   <div class="col s3 orange lighten-5 z-depth-5">
     <div class="card small hoverable orange lighten-5">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator scalable" src="green-krack-sativa.jpg"/>
+        <img class="activator scalable" src="/images/green-krack-sativa.jpg"/>
       </div>
       <div class="card-content">
         <span class="card-title activator grey-text text-darken-4">Green Krack<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
