--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -1,35 +1,35 @@
 
 <!--Select Categories -->
 <div class="row">
-  <div class="col s12 lime accent-2">
-    <ul class="tabs lime accent-2" tabs>
-      <li class="tab col s3 ">
+  <div class="col s12 grey darken-4">
+    <ul class="tabs grey darken-4" tabs>
+      <li class="tab col s3 black">
         <a ui-sref="javascript">
-          <div class="chip">
+          <div class="chip grey darken-4 lime-text text-accent-2">
             <img src="/images/Flowers.jpg" alt="Flowers">
             Flowers
           </div>
         </a>
       </li>
-      <li class="tab col s3">
+      <li class="tab col s3 black">
         <a ui-sref="angularjs">
-          <div class="chip">
+          <div class="chip grey darken-4 lime-text text-accent-2">
             <img src="/images/edibles.jpg" alt="Edibles">
             Edibles
           </div>
         </a>
       </li>
-      <li class="tab col s3">
+      <li class="tab col s3 black">
         <a ui-sref="angularjs">
-          <div class="chip">
+          <div class="chip grey darken-4 lime-text text-accent-2">
             <img src="/images/Concentrates.jpg" alt="Concentrates">
             Concentrates
           </div>
         </a>
       </li>
-      <li class="tab col s3">
+      <li class="tab col s3 black">
         <a ui-sref="jquery">
-          <div class="chip">
+          <div class="chip grey darken-4 lime-text text-accent-2">
             <img src="/images/clones.jpeg" alt="Clones">
             Clones
           </div>
@@ -48,13 +48,13 @@
 
 
 <div class="row">
-  <div class="col s3 lime accent-2 z-depth-5 products">
+  <div class="col s3 grey darken-4 z-depth-5 products">
     <div class="card small hoverable orange lighten-5">
       <div class="card-image waves-effect waves-block waves-light">
         <img class="activator scalable" src="/images/Ultra-violet-sativa.jpg"/>
       </div>
       <div class="card-content">
-        <span class="card-title activator lime accent-2">Ultra Violet</span>
+        <span class="card-title activator grey darken-4">Ultra Violet</span>
         <div class="action-btn horizontal right" style="bottom: 45px; right: 24px;">
         <br>
         <br>
@@ -71,7 +71,7 @@
           </div>
       </div>
       <div class="card-reveal">
-        <span class="card-title lime accent-2">Ultra Violet Prices<i class="material-icons right">close</i></span>
+        <span class="card-title grey darken-4">Ultra Violet Prices<i class="material-icons right">close</i></span>
         <p>1/8: $60<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons right">add</i></a></p>
         <p>1/4: $100<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons right">add</i></a></p>
         <p>1/2: $180<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons right">add</i></a></p>
@@ -79,17 +79,17 @@
       </div>
     </div>
   </div>
-  <div class="col s3 lime accent-2 z-depth-5">
-    <div class="card small hoverable lime accent-2">
+  <div class="col s3 grey darken-4 z-depth-5">
+    <div class="card small hoverable grey darken-4">
       <div class="card-image waves-effect waves-block waves-light">
         <img class="activator scalable" src="/images/green-krack-sativa.jpg"/>
       </div>
       <div class="card-content">
-        <span class="card-title activator lime accent-2">Green Krack<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
+        <span class="card-title activator grey darken-4">Green Krack<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
         <p><a href="#">Learn more about this strain</a></p>
       </div>
       <div class="card-reveal">
-        <span class="card-title lime accent-2">Green Krack Prices<i class="material-icons right">close</i></span>
+        <span class="card-title grey darken-4">Green Krack Prices<i class="material-icons right">close</i></span>
         <p>1/8: $60<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
         <p>1/4: $100<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
         <p>1/2: $180<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
