fixed responsive issues

--- a/client_side/partials/home.html
+++ b/client_side/partials/home.html
@@ -2,7 +2,8 @@
   <div class="section no-pad-bot">
     <div class="container">
       <br><br>
-      <h1 class="header center grey-text text-darken-4">Kush</h1>
+      <h1 class="header center white-text">Kush</h1>
+      <br><br><br><br><br><br><br><br><br><br>
       <div class="row center">
         <a href="#/signup" id="btnSignup" class="btn-large waves-effect waves-light lime accent-2 black-text">Join Now</a>
       </div>
@@ -10,7 +11,7 @@
 
     </div>
   </div>
-  <div class="parallax"><img ng-src="images/weedTaxi.jpg" alt="Unsplashed background img 1"></div>
+  <div class="parallax"><img ng-src="images/weedTaxi.jpg" class="responsive-img" alt="Unsplashed background img 1"></div>
 </div>
 <!-- parallax container -->
 <div class="container">
@@ -52,12 +53,13 @@
 <div class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
+      <br><br><br><br><br><br><br><br><br><br>
       <div class="row ">
         <h5 class="header col s12 white-text">Flowers are grown locally to provide the best quality medicine.</h5>
       </div>
     </div>
   </div>
-  <div class="parallax"><img ng-src="images/grow_room.jpg" alt="Unsplashed background img 2"></div>
+  <div class="parallax"><img ng-src="images/grow_room.jpg" class="responsive-img" alt="Unsplashed background img 2"></div>
 </div>
 
 <div class="container">
