--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -1,40 +1,55 @@
-<div class="input-field left">
-  <input id="search" type="search">
-  <label for="search"><i class="material-icons lime-text text-accent-2">search</i></label>
-  <i class="material-icons lime-text text-accent-2">close</i>
-</div>
-<!--Select Categories -->
 <div class="row">
-  <div class="col s12 grey darken-4">
-    <ul class="tabs grey darken-4" tabs>
-      <li class="tab col s3 black">
+  <div class="col s6">
+    <div class="search-wrapper">
+    <input id="search" type="search"/>
+  <i class="material-icons lime-text text-accent-2">search</i>
+    </div>
+    <p>
+      <input name="group1" type="radio" id="test1" />
+      <label for="test1">Red</label>
+    </p>
+    <p>
+      <input name="group1" type="radio" id="test2" />
+      <label for="test2">Yellow</label>
+    </p>
+    <p>
+      <input class="with-gap" name="group1" type="radio" id="test3"  />
+      <label for="test3">Green</label>
+    </p>
+
+  </div>
+  <!--Select Categories -->
+
+  <div class="col s6 grey darken-4">
+    <ul class="grey darken-4 row">
+      <li class="tab col s12 m3 ">
         <a ui-sref="javascript">
           <div class="chip grey darken-4 lime-text text-accent-2">
-            <img src="/images/Flowers.jpg" alt="Flowers">
+            <img src="/images/Flowers.jpg" class="responsive-img" alt="Flowers">
             Flowers
           </div>
         </a>
       </li>
-      <li class="tab col s3 black">
+      <li class="tab col s12 m3 ">
         <a ui-sref="angularjs">
           <div class="chip grey darken-4 lime-text text-accent-2">
-            <img src="/images/edibles.jpg" alt="Edibles">
+            <img src="/images/edibles.jpg" class="responsive-img" alt="Edibles">
             Edibles
           </div>
         </a>
       </li>
-      <li class="tab col s3 black">
+      <li class="tab col s12 m3 ">
         <a ui-sref="angularjs">
           <div class="chip grey darken-4 lime-text text-accent-2">
-            <img src="/images/Concentrates.jpg" alt="Concentrates">
-            Concentrates
+            <img src="/images/Concentrates.jpg" class="responsive-img" alt="Concentrates">
+            Pure
           </div>
         </a>
       </li>
-      <li class="tab col s3 black">
+      <li class="tab col s12 m3 ">
         <a ui-sref="jquery">
           <div class="chip grey darken-4 lime-text text-accent-2">
-            <img src="/images/clones.jpeg" alt="Clones">
+            <img src="/images/clones.jpeg" class="responsive-img" alt="Clones">
             Clones
           </div>
         </a>
@@ -52,27 +67,27 @@
 
 
 <div class="row">
-  <div class="col s3 grey darken-4 z-depth-5 products">
+  <div class="col s12 m3 grey darken-4 z-depth-5 products">
     <div class="card small hoverable orange lighten-5">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator scalable" src="/images/Ultra-violet-sativa.jpg"/>
+        <img class="activator scalable" src="/images/Ultra-violet-sativa.jpg" class="responsive-img"/>
       </div>
       <div class="card-content">
         <span class="card-title activator grey darken-4">Ultra Violet</span>
         <div class="action-btn horizontal right" style="bottom: 45px; right: 24px;">
-        <br>
-        <br>
-        <br>
+          <br>
+          <br>
+          <br>
           <a class="btn-floating btn red">
             <i class="material-icons">mode_edit</i>
           </a>
-              <ul>
-                <li><a class="btn-floating blue"><i class="material-icons">thumb_up</i></a></li>
-                <li><a class="btn-floating green"><i class="material-icons">thumb_down</i></a></li>
-                <li><a class="btn-floating yellow darken-1"><i class="material-icons">info_outline</i></a></li>
-                <li><a class="btn-floating red"><i class="material-icons">shopping_cart</i></a></li>
-              </ul>
-          </div>
+          <ul>
+            <li><a class="btn-floating blue"><i class="material-icons">thumb_up</i></a></li>
+            <li><a class="btn-floating green"><i class="material-icons">thumb_down</i></a></li>
+            <li><a class="btn-floating yellow darken-1"><i class="material-icons">info_outline</i></a></li>
+            <li><a class="btn-floating red"><i class="material-icons">shopping_cart</i></a></li>
+          </ul>
+        </div>
       </div>
       <div class="card-reveal">
         <span class="card-title grey darken-4">Ultra Violet Prices<i class="material-icons right">close</i></span>
@@ -83,10 +98,10 @@
       </div>
     </div>
   </div>
-  <div class="col s3 grey darken-4 z-depth-5">
+  <div class="col s12 m3 grey darken-4 z-depth-5">
     <div class="card small hoverable grey darken-4">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator scalable" src="/images/green-krack-sativa.jpg"/>
+        <img class="activator scalable" src="/images/green-krack-sativa.jpg" class="responsive-img"/>
       </div>
       <div class="card-content">
         <span class="card-title activator grey darken-4">Green Krack<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
@@ -101,25 +116,25 @@
       </div>
     </div>
   </div>
-<script type="text/javascript">
-$(document).ready(function() {
-  console.log('working');
-  $('li.tab a').click(function(){
-    //console.log(this)
-    $('li.tab a').removeClass('active')
-    $(this).addClass('active')
-    // $('#search').val('')
-  })
-  $('.dropdown-button').dropdown({
-    inDuration: 300,
-    outDuration: 225,
-    constrain_width: false, // Does not change width of dropdown to that of the activator
-    hover: true, // Activate on hover
-    gutter: 0, // Spacing from edge
-    belowOrigin: false, // Displays dropdown below the button
-    alignment: 'left' // Displays dropdown with edge aligned to the left of button
-  }
-);
+  <script type="text/javascript">
+  $(document).ready(function() {
+    console.log('working');
+    $('li.tab a').click(function(){
+      //console.log(this)
+      $('li.tab a').removeClass('active')
+      $(this).addClass('active')
+      // $('#search').val('')
+    })
+    $('.dropdown-button').dropdown({
+      inDuration: 300,
+      outDuration: 225,
+      constrain_width: false, // Does not change width of dropdown to that of the activator
+      hover: true, // Activate on hover
+      gutter: 0, // Spacing from edge
+      belowOrigin: false, // Displays dropdown below the button
+      alignment: 'left' // Displays dropdown with edge aligned to the left of button
+    }
+  );
 })
 </script>
 <!-- End Template for Products -->
