--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col s6">
     <div class="search-wrapper">
-    <input id="search" type="search"/>
-  <i class="material-icons lime-text text-accent-2">search</i>
+      <input id="search" type="search"/>
+      <i class="material-icons lime-text text-accent-2">search</i>
     </div>
     <p>
       <input name="group1" type="radio" id="test1" />
@@ -59,52 +59,14 @@
   </div>
 </div>
 <!-- Template for Products -->
-
-
-
-
-
-
-
-<div class="row">
-  <div class="col s12 m3 grey darken-4 z-depth-5 products">
-    <div class="card small hoverable orange lighten-5">
-      <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator scalable" src="/images/Ultra-violet-sativa.jpg" class="responsive-img"/>
-      </div>
-      <div class="card-content">
-        <span class="card-title activator grey darken-4">Ultra Violet</span>
-        <div class="action-btn horizontal right" style="bottom: 45px; right: 24px;">
-          <br>
-          <br>
-          <br>
-          <a class="btn-floating btn red">
-            <i class="material-icons">mode_edit</i>
-          </a>
-          <ul>
-            <li><a class="btn-floating blue"><i class="material-icons">thumb_up</i></a></li>
-            <li><a class="btn-floating green"><i class="material-icons">thumb_down</i></a></li>
-            <li><a class="btn-floating yellow darken-1"><i class="material-icons">info_outline</i></a></li>
-            <li><a class="btn-floating red"><i class="material-icons">shopping_cart</i></a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="card-reveal">
-        <span class="card-title grey darken-4">Ultra Violet Prices<i class="material-icons right">close</i></span>
-        <p>1/8: $60<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons right">add</i></a></p>
-        <p>1/4: $100<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons right">add</i></a></p>
-        <p>1/2: $180<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons right">add</i></a></p>
-        <p>Oz: $320<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons right">add</i></a></p>
-      </div>
-    </div>
-  </div>
-  <div class="col s12 m3 grey darken-4 z-depth-5">
+  <div class="col s12 m3 grey darken-4 z-depth-2" ng-repeat="strain in pr.strains">
     <div class="card small hoverable grey darken-4">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator scalable" src="/images/green-krack-sativa.jpg" class="responsive-img"/>
+        <img class="activator scalable" ng-src="{{}}" class="responsive-img"/>
       </div>
       <div class="card-content">
-        <span class="card-title activator grey darken-4">Green Krack<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
+        <span class="card-title activator grey darken-4">{{strain.Name}}<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
+        <img class="" ng-src="{{strain.StarImage}}" /><span>{{strain.Rating}}</span>
         <p><a href="#">Learn more about this strain</a></p>
       </div>
       <div class="card-reveal">
