buttons and shit

--- a/client_side/partials/cart.html
+++ b/client_side/partials/cart.html
@@ -1,5 +1,5 @@
 <div class="cart black">
-  <table class="table highlight bordered row">
+  <table class="table bordered row">
     <thead class="col s12">
       <tr class="row valign-wrapper lime-text accent-2">
         <th class="col s2"></th>
@@ -7,7 +7,7 @@
         <th class="col s2" data-field="price">Price</th>
         <th class="col s2" data-field="qty">Qty</th>
         <th class="col s1" data-field="total">Total</th>
-        <th class="col s1" data-field="remove">Remove</th>
+        <th class="col s1" data-field="remove"></th>
       </tr>
     </thead>
     <tbody class="col s12">
