--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -65,12 +65,12 @@
         <img class="activator scalable" ng-src="{{}}" class="responsive-img"/>
       </div>
       <div class="card-content">
-        <span class="card-title activator grey darken-4">{{strain.Name}}<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
+        <span class="card-title activator ">{{strain.Name}}<a class="btn-floating btn-med waves-effect waves-light lime accent-2 right"><i class="material-icons black-text">shopping_cart</i></a></span>
         <img class="" ng-src="{{strain.StarImage}}" /><span>{{strain.Rating}}</span>
         <p><a href="#">Learn more about this strain</a></p>
       </div>
       <div class="card-reveal">
-        <span class="card-title grey darken-4">Green Krack Prices<i class="material-icons right">close</i></span>
+        <span class="card-title lime accent-2">Green Krack Prices<i class="material-icons right">close</i></span>
         <p>1/8: $60<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
         <p>1/4: $100<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
         <p>1/2: $180<a class="btn-floating btn-med waves-effect waves-light red right"><i class="material-icons">add</i></a></p>
