--- a/client_side/partials/contact.html
+++ b/client_side/partials/contact.html
@@ -1,5 +1,5 @@
 <!-- Contact Form -->
-<div class="row orange lighten-5 z-depth-5">
+<div class="row grey darken-4 z-depth-5">
   <div class="container">
 
     <div class="lime-text text-accent-2 text darken-2">
