--- a/client_side/partials/home.html
+++ b/client_side/partials/home.html
@@ -7,7 +7,7 @@
         #1 Delivery Service in Venice, Santa Monica, and Marina Del Rey
       </p>
       <div class="row center">
-        <a href="#/signup" id="btnSignup" class="btn-large waves-effect waves-light lime accent-2 black-text">Join Now</a>
+        <a href="#/signup" id="btnSignup" class="join-now btn-large waves-effect waves-light brown darken-4">Sign Up</a>
       </div>
       <br><br>
 
