--- a/client_side/partials/locations.html
+++ b/client_side/partials/locations.html
@@ -3,7 +3,7 @@
     <div class="lime-text text-accent-2 text darken-2">
         <h5><b>Service Areas: Venice, Santa Monica, Marina Del Rey</b></h5>
           <br>
-        <div class="row orange lighten-5 z-depth-5">
+        <div class="row grey darken-4 z-depth-5">
             <img src="/images/Service_area.jpg"/>
         </div>
     </div>
