--- a/client_side/partials/logIn.html
+++ b/client_side/partials/logIn.html
@@ -2,7 +2,7 @@
 
 <div id="modal1" class="modal">
   <div class="modal-content lighten-5 z-depth-5">
-        <div class="row orange lighten-5 z-depth-5">
+        <div class="row grey darken-4 z-depth-5">
           <div class="container lime-text text-accent-2 text darken-2">
             <h5>Patient Portal</h5>
             <form ng-submit="ln.submit()">
