home page styling2

--- a/client_side/partials/home.html
+++ b/client_side/partials/home.html
@@ -3,11 +3,11 @@
     <div class="container">
       <br><br>
       <h1 class="header">Kush</h1>
-      <p class="tag-line left">
+      <!-- <p class="tag-line left">
         #1 Delivery Service in Venice, Santa Monica, and Marina Del Rey
-      </p>
+      </p> -->
       <div class="row center">
-        <a href="#/signup" id="btnSignup" class="join-now btn-large waves-effect waves-light brown darken-4">Sign Up</a>
+        <a href="#/signup" id="btnSignup" class="join-now btn-large waves-effect waves-light brown darken-4">Join Now</a>
       </div>
       <br><br>
 
