cart button color

--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -72,10 +72,10 @@
 <div class="col s12 m3 grey darken-4 z-depth-2" ng-repeat="strain in pr.strains">
   <div class="card small hoverable grey darken-4">
     <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator scalable" ng-src="https://d3h17ltqi8v019.cloudfront.net/hybrid/{{ strain.UrlName }}/primary?width=1024" class="responsive-img"/>
+      <img class="activator scalable" ng-src="https://d3h17ltqi8v019.cloudfront.net/hybrid/{{ strain.UrlName }}/primary?width=1024" class="center responsive-img"/>
     </div>
     <div class="card-content">
-      <span class="card-title activator grey darken-4">{{strain.Name}}<a class="btn-floating btn-med waves-effect waves-light lime darken-4 right"><i class="material-icons">shopping_cart</i></a></span>
+      <span class="card-title activator grey darken-4">{{strain.Name}}<a class="btn-floating btn-med waves-effect waves-light lime accent-2 right"><i class="material-icons black-text">shopping_cart</i></a></span>
       <img class="" ng-src="{{strain.StarImage}}" /><span>{{strain.Rating}}</span>
       <p><a href="#">Learn more about this strain</a></p>
     </div>
