--- a/client_side/partials/home.html
+++ b/client_side/partials/home.html
@@ -13,7 +13,7 @@
 
     </div>
   </div>
-  <div class="parallax"><img ng-src="images/taxi2.jpg" class="responsive-img" alt="Unsplashed background img 1"></div>
+  <div class="parallax"><img src="images/taxi2.jpg" class="responsive-img" alt="Unsplashed background img 1"></div>
 </div>
 <!-- parallax container -->
 <div class="container">
@@ -61,7 +61,7 @@
       </div>
     </div>
   </div>
-  <div class="parallax"><img ng-src="images/grow_room.jpg" class="responsive-img" alt="Unsplashed background img 2"></div>
+  <div class="parallax"><img src="images/grow_room.jpg" class="responsive-img" alt="Unsplashed background img 2"></div>
 </div>
 
 <div class="container">
