--- a/client_side/partials/logIn.html
+++ b/client_side/partials/logIn.html
@@ -1,6 +1,6 @@
 <!-- Patient Login Form -->
 
-<div id="modal1" class="modal">
+<div id="loginModal" class="modal">
   <div class="modal-content lighten-5 z-depth-5">
         <div class="row grey darken-4 z-depth-5">
           <div class="container lime-text text-accent-2 text darken-2">
