--- a/client_side/partials/orders.html
+++ b/client_side/partials/orders.html
@@ -2,7 +2,7 @@
 <div class="row orange lighten-5 z-depth-5" >
   <div class="lime-text text-accent-2 text darken-2">
     <ul class="collapsible " data-collapsible="accordion" watch>
-        <li ng-repeat="order in ps.orders">
+        <li ng-repeat="order in p.patient.orders">
             <div class="collapsible-header">
               <span class="left"><i class="fa fa-shopping-bag"></i> {{ order.id }}</span>
               <span class="left"><i class="fa fa-money"></i>{{ order.total | currency }}</span>
