--- a/client_side/partials/products.html
+++ b/client_side/partials/products.html
@@ -80,16 +80,16 @@
       <p><a href="#">Learn more about this strain</a></p>
     </div>
     <div class="card-reveal grey darken-4">
-      <span class="card-title">Green Krack Prices<i class="material-icons right">close</i></span>
+      <span class="card-title">{{strain.Name}} Prices<i class="material-icons right">close</i></span>
       <!-- Dropdown Trigger -->
-      <a class="dropdown-button btn" href="#" data-activates="dropdown1" data-beloworigin="true">Choose an option</a>
+      <a class="dropdown-button btn" href='javascript:void(0);' data-activates="dropdown1" data-beloworigin="true">Choose an option</a>
       <!-- Dropdown Structure -->
       <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#!">1g</a></li>
-        <li><a href="#!">1/8oz (3.5g)</a></li>
-        <li><a href="#!">1/4oz (7g)</a></li>
-        <li><a href="#!">1/2oz (14g)</a></li>
-        <li><a href="#!">1oz (28g)</a></li>
+        <li><a href='javascript:void(0);'>1g</a></li>
+        <li><a href='javascript:void(0);'>1/8oz (3.5g)</a></li>
+        <li><a href='javascript:void(0);'>1/4oz (7g)</a></li>
+        <li><a href='javascript:void(0);'>1/2oz (14g)</a></li>
+        <li><a href='javascript:void(0);'>1oz (28g)</a></li>
       </ul>
     </div>
   </div>
